# rust-secure-pass-gen

./: Cargo.toml  LICENSE  README.md
assets/: eff_large_wordlist.txt
src/: cli.rs  main.rs  test.rs  word.rs
src/password_generator/: base.rs  memorable.rs  mod.rs  pin.rs  random.rs
