[package]
name = "pass-gen"
version = "0.1.0"
edition = "2021"
description="secure cli password generator"
authors=["pouyan shalbafan <info@pouyan.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.4.7", features = ["derive"] }
console = "0.15.7"
ctrlc = "3.4.1"
rand = "0.8.5"
regex = "1.10.2"
secrecy = "0.8.0"
